fixed login modal - z-index of overlay & add fullheight to layout.scss

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,21 @@ hr {
   height: 0;
   overflow: visible; }
 
+html {
+  position: relative;
+  min-height: 100%; }
+
+body {
+  margin: 0 0 280px;
+  /* bottom = footer height */ }
+
+footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 280px;
+  width: 100%; }
+
 header {
   width: 100%;
   height: 400px;
@@ -277,6 +292,7 @@ input.required {
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 1;
   background: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
@@ -286,6 +302,7 @@ input.required {
     width: 500px;
     position: relative;
     background: #FFFFFF;
+    top: 20px;
     padding: 30px;
     border-radius: 2px;
     -webkit-border-radius: 2px;
@@ -738,53 +755,3 @@ main .search {
       main .search .search-container .searchForm #btn-search {
         margin: 40px 15px 20px 15px;
         border: none; }
-
-.container .item-container {
-  background: #F5F5F5;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
-  display: flex;
-  justify-content: center;
-  flex-direction: column; }
-  .container .item-container .item-img {
-    background: url("http://placehold.it/800x150") no-repeat center center;
-    background-size: cover;
-    width: 100%;
-    height: 230px; }
-  .container .item-container .user-comments {
-    width: 100%; }
-    .container .item-container .user-comments:before, .container .item-container .user-comments:after {
-      content: " ";
-      display: table; }
-    .container .item-container .user-comments:after {
-      clear: both; }
-    .container .item-container .user-comments .comment {
-      position: relative;
-      width: 80%;
-      height: 45px;
-      background: #FFFFFF;
-      margin: 20px auto;
-      padding: 5%; }
-      .container .item-container .user-comments .comment .comment-txt {
-        display: inline-block; }
-      .container .item-container .user-comments .comment .cmt-icon {
-        position: absolute;
-        width: 60px;
-        height: 60px;
-        color: #47B8E0;
-        right: 0;
-        top: 18px;
-        padding-top: 30px; }
-        .container .item-container .user-comments .comment .cmt-icon i {
-          font-size: 1.8em; }
-    .container .item-container .user-comments #getLoc {
-      float: right;
-      width: 9em;
-      height: 2.5em;
-      margin: 2%;
-      background: #47B8E0;
-      color: #FFFFFF;
-      font-size: 1em;
-      font-family: Roboto, Helvetica, "Helvetica Neue", sans-serif;
-      outline: none;
-      border: none;
-      border-radius: 2px; }
