--- a/stylesheets/_layout.scss
+++ b/stylesheets/_layout.scss
@@ -1,4 +1,18 @@
-// Base Layout Styles - can include media queries
+// // Base Layout Styles - can include media queries
+html {
+  position: relative;
+  min-height: 100%;
+
+}
+
 body {
-  //position: relative;
+    margin: 0 0 280px; /* bottom = footer height */
+}
+
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 280px;
+    width: 100%;
 }
