--- a/stylesheets/pages/_loginModal.scss
+++ b/stylesheets/pages/_loginModal.scss
@@ -4,6 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 1;
   background: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
@@ -15,6 +16,7 @@
     width: 500px;
     position: relative;
     background: $light;
+    top: 20px;
     padding: 30px;
     @include border-radius(2px);
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
